# scixtract

./: .bumpversion.cfg  .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  MAINTAINER_README.md  Makefile  PACKAGE_SUMMARY.md  README.md  README_old.md  coverage.xml  pyproject.toml  scixtract.example.json  scixtract.example.toml  scixtract.example.yaml
.github/workflows/: publish.yml  pypi_publish.yml  test.yml
examples/: basic_extraction.py  batch_processing.py
src/scixtract/: __init__.py  cli.py  config.py  extractor.py  knowledge.py  models.py  setup.py
test_data/: references.bib
tests/: __init__.py  test_cli.py  test_extractor.py  test_knowledge.py  test_models.py
